--- a/articles.html
+++ b/articles.html
@@ -290,7 +290,7 @@
     <nav id="mainNav" class="fixed w-full top-0 z-50 pure-glass-nav transition-all duration-300">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16 md:h-20">
-                <a href="index.html" class="text-2xl md:text-3xl font-bold gradient-text">BioNova</a>
+                <a href="index.html" class="text-2xl md:text-3xl font-bold gradient-text">YCI</a>
                 
                 <div class="flex items-center space-x-4">
                     <!-- Mobile menu button -->
@@ -304,9 +304,9 @@
                 <!-- Desktop menu -->
                 <div class="hidden md:flex items-center space-x-8">
                     <a href="index.html" class="text-white hover:text-white/90 font-medium transition-colors">Home</a>
-                    <a href="articles.html" class="text-white hover:text-white/90 font-medium transition-colors">Publications</a>
+                    <a href="articles.html" class="text-white hover:text-white/90 font-medium transition-colors">Events</a>
                     <a href="team.html" class="text-white hover:text-white/90 font-medium transition-colors">Team</a>
-                    <a href="services.html" class="text-white hover:text-white/90 font-medium transition-colors">About</a>
+                    <a href="services.html" class="text-white hover:text-white/90 font-medium transition-colors">blogs</a>
                     <a href="contact.html" class="px-6 py-2.5 bg-gradient-to-r from-white/20 to-white/10 text-white rounded-full font-medium hover:bg-white/30 hover:shadow-lg hover:scale-105 transition-all duration-300 border border-white/30">Contact</a>
                 </div>
             </div>
@@ -315,9 +315,9 @@
             <div id="mobileMenu" class="hidden md:hidden pb-4 pt-2">
                 <div class="flex flex-col space-y-3">
                     <a href="index.html" class="text-white hover:text-white/90 font-medium transition-colors py-2">Home</a>
-                    <a href="articles.html" class="text-white hover:text-white/90 font-medium transition-colors py-2">Publications</a>
+                    <a href="articles.html" class="text-white hover:text-white/90 font-medium transition-colors py-2">Events</a>
                     <a href="team.html" class="text-white hover:text-white/90 font-medium transition-colors py-2">Team</a>
-                    <a href="services.html" class="text-white hover:text-white/90 font-medium transition-colors py-2">About</a>
+                    <a href="services.html" class="text-white hover:text-white/90 font-medium transition-colors py-2">Blogs</a>
                     <a href="contact.html" class="px-6 py-2.5 bg-gradient-to-r from-white/20 to-white/10 text-white rounded-full font-medium text-center border border-white/30">Contact</a>
                 </div>
             </div>
