--- a/services.html
+++ b/services.html
@@ -1,249 +1,198 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Announcements - BioNova</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Announcements - BioNova</title>
 
-    <!-- Tailwind CSS CDN -->
-    <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Tailwind CSS -->
+  <script src="https://cdn.tailwindcss.com"></script>
 
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
 
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet" />
 
-    <style>
-        * {
-            font-family: 'Inter', system-ui, -apple-system, sans-serif;
-        }
-
-        html {
-            scroll-behavior: smooth;
-        }
-
-        .solid-card {
-            background: white;
-            border-radius: 1rem;
-            overflow: hidden;
-            box-shadow: 0 10px 25px rgba(0, 0, 0, 0.05);
-            border: 1px solid rgba(0, 0, 0, 0.05);
-            height: 100%;
-        }
-
-        .card-image-wrapper img {
-            width: 100%;
-            height: 200px;
-            object-fit: cover;
-            display: block;
-        }
-
-        .service-body {
-            color: #4b5563;
-            line-height: 1.7;
-        }
-
-        .read-more-btn {
-            display: inline-block;
-            font-size: 0.875rem;
-            font-weight: 600;
-            color: #2563eb;
-            margin-top: 1rem;
-            cursor: pointer;
-            background: none;
-            border: none;
-            padding: 0;
-            text-decoration: underline;
-        }
-
-        .read-more-btn:hover {
-            color: #1d4ed8;
-        }
-
-        .hidden-content {
-            display: none;
-        }
-    </style>
+  <style>
+    * {
+      font-family: 'Inter', system-ui, -apple-system, sans-serif;
+    }
+    html {
+      scroll-behavior: smooth;
+    }
+  </style>
 </head>
+<body class="bg-gradient-to-br from-[#003f87] to-[#a8e6cf] min-h-screen">
 
-<body class="bg-gradient-to-br from-cyan-50 via-blue-50 to-teal-50 min-h-screen">
-
-    <!-- Navigation -->
-    <nav id="mainNav" class="fixed w-full top-0 z-50 bg-white/90 backdrop-blur-sm border-b border-gray-200">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="flex justify-between items-center h-16 md:h-20">
-                <a href="index.html" class="text-2xl md:text-3xl font-bold text-blue-800">BioNova</a>
-                <div class="hidden md:flex items-center space-x-8">
-                    <a href="index.html" class="text-gray-700 hover:text-blue-700 font-medium">Home</a>
-                    <a href="articles.html" class="text-gray-700 hover:text-blue-700 font-medium">Publications</a>
-                    <a href="services.html" class="text-gray-700 hover:text-blue-700 font-medium">Announcements</a>
-                    <a href="team.html" class="text-gray-700 hover:text-blue-700 font-medium">Team</a>
-                    <a href="contact.html" class="px-6 py-2.5 bg-gradient-to-r from-blue-800 to-teal-600 text-white rounded-full font-medium hover:shadow-lg hover:scale-105 transition-all">Contact</a>
-                </div>
-                <button id="mobileMenuBtn" class="md:hidden p-2 rounded-lg hover:bg-gray-100">
-                    <svg class="w-6 h-6 text-gray-800" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
-                    </svg>
-                </button>
-            </div>
-            <div id="mobileMenu" class="hidden md:hidden pb-4 pt-2 flex flex-col space-y-2">
-                <a href="index.html" class="text-gray-700 hover:text-blue-700 font-medium py-2">Home</a>
-                <a href="articles.html" class="text-gray-700 hover:text-blue-700 font-medium py-2">Publications</a>
-                <a href="services.html" class="text-gray-700 hover:text-blue-700 font-medium py-2">Announcements</a>
-                <a href="team.html" class="text-gray-700 hover:text-blue-700 font-medium py-2">Team</a>
-                <a href="contact.html" class="px-6 py-2.5 bg-gradient-to-r from-blue-800 to-teal-600 text-white rounded-full font-medium text-center">Contact</a>
-            </div>
+  <!-- Navigation -->
+  <nav id="mainNav" class="fixed w-full top-0 z-50 bg-white/90 backdrop-blur-sm border-b border-gray-200">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+      <div class="flex justify-between items-center h-16 md:h-20">
+        <a href="index.html" class="text-2xl md:text-3xl font-bold text-blue-800">BioNova</a>
+        <div class="hidden md:flex items-center space-x-8">
+          <a href="index.html" class="text-gray-700 hover:text-blue-700 font-medium">Home</a>
+          <a href="articles.html" class="text-gray-700 hover:text-blue-700 font-medium">Publications</a>
+          <a href="services.html" class="text-gray-700 hover:text-blue-700 font-medium">Announcements</a>
+          <a href="team.html" class="text-gray-700 hover:text-blue-700 font-medium">Team</a>
+          <a href="contact.html" class="px-6 py-2.5 bg-gradient-to-r from-blue-800 to-teal-600 text-white rounded-full font-medium hover:shadow-lg hover:scale-105 transition-all">Contact</a>
         </div>
-    </nav>
+        <button id="mobileMenuBtn" class="md:hidden p-2 rounded-lg hover:bg-gray-100">
+          <svg class="w-6 h-6 text-gray-800" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
+          </svg>
+        </button>
+      </div>
+      <div id="mobileMenu" class="hidden md:hidden pb-4 pt-2 flex flex-col space-y-3">
+        <a href="index.html" class="text-gray-700 hover:text-blue-700 font-medium py-2">Home</a>
+        <a href="articles.html" class="text-gray-700 hover:text-blue-700 font-medium py-2">Publications</a>
+        <a href="services.html" class="text-gray-700 hover:text-blue-700 font-medium py-2">Announcements</a>
+        <a href="team.html" class="text-gray-700 hover:text-blue-700 font-medium py-2">Team</a>
+        <a href="contact.html" class="px-6 py-2.5 bg-gradient-to-r from-blue-800 to-teal-600 text-white rounded-full font-medium text-center">Contact</a>
+      </div>
+    </div>
+  </nav>
 
-    <!-- Main Content -->
-    <main class="pt-24 pb-12">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="text-center mb-12">
-                <h1 class="text-4xl md:text-5xl font-bold text-gray-900 mb-4">Announcements</h1>
-                <p class="text-lg md:text-xl text-gray-600 max-w-2xl mx-auto">
-                    YCI Bangladesh blah blah blah
-                </p>
-            </div>
-
-            <div id="services-container" class="grid grid-cols-1 gap-8">
-                <div class="flex justify-center py-12">
-                    <div class="w-12 h-12 border-4 border-blue-700 border-t-transparent rounded-full animate-spin"></div>
-                </div>
-            </div>
+  <!-- Main Content -->
+  <main class="pt-24 pb-12">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+      <!-- Content card with backdrop for readability -->
+      <div class="bg-white/80 backdrop-blur-sm rounded-2xl shadow-xl p-6 md:p-8">
+        <div class="text-center mb-12">
+          <h1 class="text-4xl md:text-5xl font-bold text-gray-900 mb-4">Announcements</h1>
+          <p class="text-lg md:text-xl text-gray-600 max-w-2xl mx-auto">
+            YCI Bangladesh blah blah blah
+          </p>
         </div>
-    </main>
 
-    <!-- Footer -->
-    <footer class="bg-gray-900 text-gray-300">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12">
-            <div class="text-center">
-                <p>&copy; 2025 BioNova. All rights reserved.</p>
-            </div>
+        <div id="services-container" class="grid grid-cols-1 gap-8">
+          <div class="flex justify-center py-12">
+            <div class="w-12 h-12 border-4 border-blue-700 border-t-transparent rounded-full animate-spin"></div>
+          </div>
         </div>
-    </footer>
+      </div>
+    </div>
+  </main>
 
-    <script>
-        // --- YAML Parser ---
-        function parseYAML(yamlStr) {
-            const result = {};
-            yamlStr.trim().split('\n').forEach(line => {
-                const idx = line.indexOf(':');
-                if (idx === -1) return;
-                let key = line.slice(0, idx).trim();
-                let val = line.slice(idx + 1).trim().replace(/^[\"']|[\"']$/g, '');
-                if (val === 'true') val = true;
-                if (val === 'false') val = false;
-                if (!isNaN(val) && val !== '') val = Number(val);
-                result[key] = val;
-            });
-            return result;
+  <!-- Footer -->
+  <footer class="bg-gray-900/90 backdrop-blur text-gray-300">
+    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12">
+      <div class="text-center">
+        <p>&copy; 2025 BioNova. All rights reserved.</p>
+      </div>
+    </div>
+  </footer>
+
+  <script>
+    // --- YAML Parser ---
+    function parseYAML(yamlStr) {
+      const result = {};
+      yamlStr.trim().split('\n').forEach(line => {
+        const idx = line.indexOf(':');
+        if (idx === -1) return;
+        let key = line.slice(0, idx).trim();
+        let val = line.slice(idx + 1).trim().replace(/^[\"']|[\"']$/g, '');
+        if (val === 'true') val = true;
+        if (val === 'false') val = false;
+        if (!isNaN(val) && val !== '') val = Number(val);
+        result[key] = val;
+      });
+      return result;
+    }
+
+    // Markdown to HTML (minimal)
+    function simpleMarkdownToHTML(md) {
+      let html = md.trim();
+      html = html.replace(/^### (.*$)/gm, '<h3 class="text-lg font-semibold mt-4 mb-2 text-gray-800">$1</h3>');
+      html = html.replace(/^## (.*$)/gm, '<h2 class="text-xl font-bold mt-6 mb-3 text-gray-900">$1</h2>');
+      html = html.replace(/^# (.*$)/gm, '<h1 class="text-2xl font-bold mt-8 mb-4 text-gray-900">$1</h1>');
+      html = html.replace(/\*\*(.*?)\*\*/g, '<strong class="font-semibold">$1</strong>');
+      html = html.replace(/\*(.*?)\*/g, '<em class="italic">$1</em>');
+      html = html.replace(/\[([^\]]+)\]\(([^)]+)\)/g, '<a href="$2" target="_blank" rel="noopener" class="text-blue-600 hover:underline">$1</a>');
+      html = html.replace(/^-\s+(.*$)/gm, '<li class="ml-4 list-disc text-gray-700">$1</li>');
+      html = html.replace(/(<li>.*<\/li>+)/g, '<ul class="my-2">$1</ul>');
+      html = html
+        .split('\n\n')
+        .map(p => p.trim())
+        .filter(p => p)
+        .map(p => `<p class="text-gray-700 leading-relaxed mb-4">${p}</p>`)
+        .join('');
+      html = html.replace(/<\/?p>\s*<(ul|ol|h[1-3]|strong|em|a)/g, '<$1');
+      html = html.replace(/(ul|ol|h[1-3]|strong|em|a)>\s*<\/p>/g, '$1>');
+      return html;
+    }
+
+    function toggleReadMore(cardId) {
+      const full = document.getElementById(`full-${cardId}`);
+      const btn = document.getElementById(`btn-${cardId}`);
+      const isHidden = full.classList.contains('hidden');
+      full.classList.toggle('hidden', !isHidden);
+      btn.textContent = isHidden ? 'Show less' : 'Read more';
+    }
+
+    async function loadServices() {
+      try {
+        const res = await fetch('/content/index.json');
+        if (!res.ok) throw new Error('Failed to load index');
+        const indexData = await res.json();
+        const serviceFiles = indexData.services || [];
+
+        const servicePromises = serviceFiles.map(file =>
+          fetch(`/content/${file}`).then(r => r.ok ? r.text() : Promise.reject())
+        );
+        const serviceTexts = await Promise.all(servicePromises);
+
+        const services = [];
+        for (let i = 0; i < serviceTexts.length; i++) {
+          const text = serviceTexts[i];
+          const parts = text.split('---');
+          if (parts.length >= 3) {
+            const frontmatter = parts[1];
+            const body = parts.slice(2).join('---');
+            const meta = parseYAML(frontmatter);
+            const htmlBody = simpleMarkdownToHTML(body);
+            services.push({ id: `card-${i}`, meta, htmlBody });
+          }
         }
+        renderServices(services);
+      } catch (error) {
+        console.error('Error loading services:', error);
+        document.getElementById('services-container').innerHTML =
+          `<p class="text-center text-red-600 col-span-full">Failed to load announcements.</p>`;
+      }
+    }
 
-        // Markdown to HTML (minimal)
-        function simpleMarkdownToHTML(md) {
-            let html = md.trim();
-            html = html.replace(/^### (.*$)/gm, '<h3>$1</h3>');
-            html = html.replace(/^## (.*$)/gm, '<h2>$1</h2>');
-            html = html.replace(/^# (.*$)/gm, '<h1>$1</h1>');
-            html = html.replace(/\*\*(.*?)\*\*/g, '<strong>$1</strong>');
-            html = html.replace(/\*(.*?)\*/g, '<em>$1</em>');
-            html = html.replace(/\[([^\]]+)\]\(([^)]+)\)/g, '<a href="$2" target="_blank" rel="noopener">$1</a>');
-            html = html.replace(/^-\s+(.*$)/gm, '<li>$1</li>');
-            html = html.replace(/(<li>.*<\/li>+)/g, '<ul>$1</ul>');
-            html = html
-                .split('\n\n')
-                .map(p => p.trim())
-                .filter(p => p)
-                .map(p => `<p>${p}</p>`)
-                .join('');
-            html = html.replace(/<\/?p>\s*<(ul|ol|h[1-3]|strong|em|a)/g, '<$1');
-            html = html.replace(/(ul|ol|h[1-3]|strong|em|a)>\s*<\/p>/g, '$1>');
-            return html;
-        }
+    function renderServices(services) {
+      const container = document.getElementById('services-container');
+      if (services.length === 0) {
+        container.innerHTML = `<p class="text-center text-gray-600 col-span-full">No announcements available.</p>`;
+        return;
+      }
 
-        // Toggle "Read more" per card
-        function toggleReadMore(cardId) {
-            const full = document.getElementById(`full-${cardId}`);
-            const btn = document.getElementById(`btn-${cardId}`);
-            const isHidden = full.style.display === 'none' || full.style.display === '';
-            full.style.display = isHidden ? 'block' : 'none';
-            btn.textContent = isHidden ? 'Show less' : 'Read more';
-        }
+      container.innerHTML = services.map((service) => {
+        return `
+<div class="w-full p-4">
+  <div class="p-6">
+    <h3 class="text-xl font-bold text-gray-900 mb-3">${service.meta.title}</h3>
+    <div class="text-gray-700 space-y-4">
+      <div id="full-${service.id}" class="hidden">${service.htmlBody}</div>
+      <button id="btn-${service.id}" class="text-blue-600 font-medium hover:underline" onclick="toggleReadMore('${service.id}')">
+        Read more
+      </button>
+    </div>
+  </div>
+</div>
+        `;
+      }).join('');
+    }
 
-        // Load services from /content
-        async function loadServices() {
-            try {
-                const res = await fetch('/content/index.json');
-                if (!res.ok) throw new Error('Failed to load index');
-                const indexData = await res.json();
-                const serviceFiles = indexData.services || [];
+    document.getElementById('mobileMenuBtn').addEventListener('click', () => {
+      document.getElementById('mobileMenu').classList.toggle('hidden');
+    });
 
-                const servicePromises = serviceFiles.map(file =>
-                    fetch(`/content/${file}`).then(r => r.ok ? r.text() : Promise.reject())
-                );
-                const serviceTexts = await Promise.all(servicePromises);
-
-                const services = [];
-                for (let i = 0; i < serviceTexts.length; i++) {
-                    const text = serviceTexts[i];
-                    const parts = text.split('---');
-                    if (parts.length >= 3) {
-                        const frontmatter = parts[1];
-                        const body = parts.slice(2).join('---');
-                        const meta = parseYAML(frontmatter);
-                        const htmlBody = simpleMarkdownToHTML(body);
-                        services.push({ id: `card-${i}`, meta, htmlBody });
-                    }
-                }
-
-                renderServices(services);
-            } catch (error) {
-                console.error('Error loading services:', error);
-                document.getElementById('services-container').innerHTML =
-                    `<p class="text-center text-red-600 col-span-full">Failed to load announcements.</p>`;
-            }
-        }
-
-        function renderServices(services) {
-            const container = document.getElementById('services-container');
-            if (services.length === 0) {
-                container.innerHTML = `<p class="text-center text-gray-600 col-span-full">No announcements available.</p>`;
-                return;
-            }
-
-            container.innerHTML = services.map((service) => {
-                const imageUrl = service.meta.image || 'https://via.placeholder.com/800x500/e2e8f0/64748b?text=Announcement';
-                return `
-                    <div class="service-card">
-                        <div class="solid-card">
-                            <div class="card-image-wrapper">
-                                <img src="${imageUrl}" alt="${service.meta.title}"
-                                     onerror="this.src='https://via.placeholder.com/800x500/f1f5f9/94a3b8?text=Image+Unavailable'">
-                            </div>
-                            <div class="p-6">
-                                <h3 class="text-xl font-bold mb-3 text-gray-900">${service.meta.title}</h3>
-                                <div class="service-body">
-                                    <div id="full-${service.id}" class="hidden-content" style="display:none;">${service.htmlBody}</div>
-                                    <button id="btn-${service.id}" class="read-more-btn" onclick="toggleReadMore('${service.id}')">Read more</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                `;
-            }).join('');
-        }
-
-        // Mobile menu toggle
-        document.getElementById('mobileMenuBtn').addEventListener('click', function () {
-            document.getElementById('mobileMenu').classList.toggle('hidden');
-        });
-
-        // Init
-        document.addEventListener('DOMContentLoaded', loadServices);
-    </script>
+    document.addEventListener('DOMContentLoaded', loadServices);
+  </script>
 </body>
 </html>
