--- a/index.html
+++ b/index.html
@@ -346,10 +346,10 @@
       
       <div class="relative z-10 max-w-4xl mx-auto px-4 sm:px-6 lg:px-8 text-center text-white">
         <h1 class="text-4xl sm:text-5xl md:text-6xl font-bold mb-6 page-load">
-          YCI placeholder
+          Our mission
         </h1>
         <p class="text-lg md:text-xl mb-10 page-load delay-1">
-          Client ja bolbe
+          TO BUILD A CLIMATE RESILIENT BANGLADESH WHERE YOUTH LEADS TOWARD
         </p>
         <div class="flex flex-col sm:flex-row gap-4 justify-center">
           <a href="contact.html" class="px-8 py-4 bg-gradient-to-r from-primary to-secondary text-white rounded-full font-semibold hover:scale-105 transition glow-button page-load delay-2">
